--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   --primary: #1f2642;
   --accent: #fe6e0e;
 }
+
+/* Fonts
+   ========================================================================== */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Poppins:wght@100;300;400;500;600;700;800&display=swap');
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -223,6 +229,7 @@ textarea {
 button,
 input {
   overflow: visible;
+
 }
 
 /**
@@ -410,6 +417,7 @@ textarea {
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1,
@@ -419,6 +427,7 @@ h4,
 h5,
 h6 {
   clear: both;
+  font-family: 'Poppins', sans-serif;
 }
 
 p {
@@ -499,8 +508,8 @@ ol {
   list-style: decimal;
 }
 
-li > ul,
-li > ol {
+li>ul,
+li>ol {
   margin-bottom: 0;
   margin-left: 1.5em;
 }
@@ -648,18 +657,29 @@ textarea {
 /*--------------------------------------------------------------
 # header
 --------------------------------------------------------------*/
-.small-header {
+.small-header.container {
   background-color: var(--accent);
-  padding: 10px;
+  padding: 20px 20px;
   border-radius: 5px 5px 0 0;
 }
 
-.small-nav {
+
+
+/*--------------------------------------------------------------
+# Components
+--------------------------------------------------------------*/
+
+/* Navigation
+--------------------------------------------- */
+.small-nav,
+.social-icons {
   list-style: none;
   margin: 0;
   padding: 0;
   text-align: left;
+  line-height: 1;
 }
+
 .small-nav li {
   display: inline-block;
   margin-right: 10px;
@@ -672,102 +692,48 @@ textarea {
 .small-nav li a {
   color: #ffffff;
   text-decoration: none;
-}
-/*--------------------------------------------------------------
-# Components
---------------------------------------------------------------*/
-
-/* Navigation
---------------------------------------------- */
-.main-navigation {
-  display: block;
-  width: 100%;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
 }
 
-.main-navigation ul {
-  display: none;
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
+.social-icons {
+  text-align: right;
 }
 
-.main-navigation ul ul {
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-  float: left;
-  position: absolute;
-  top: 100%;
-  left: -999em;
-  z-index: 99999;
+.social-icons li {
+  display: inline-block;
+  margin-left: 10px;
 }
 
-.main-navigation ul ul ul {
-  left: -999em;
-  top: 0;
+.social-icons li a {
+  color: #ffffff;
+
 }
 
-.main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul {
-  display: block;
-  left: auto;
+.main-header.container {
+  background-color: var(--primary);
+  border-radius: 5px;
+  padding: 10px;
 }
 
-.main-navigation ul ul a {
-  width: 200px;
+.site-branding .mega-menu-toggle {
+  color: #fff;
+  font-size: 40px;
+  margin-left: 20px;
+  display: inline-block;
 }
 
-.main-navigation ul li:hover > ul,
-.main-navigation ul li.focus > ul {
-  left: auto;
+.site-branding.custom-logo-link {
+  display: inline-block;
+  padding: 10px;
+  margin-left: 20px;
+
 }
 
-.main-navigation li {
-  position: relative;
-}
+.site-branding.custom-logo-link img {
+  max-width: 100%;
 
-.main-navigation a {
-  display: block;
-  text-decoration: none;
-}
-
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-  display: block;
-}
-
-@media screen and (min-width: 37.5em) {
-  .menu-toggle {
-    display: none;
-  }
-
-  .main-navigation ul {
-    display: flex;
-  }
-}
-
-.site-main .comment-navigation,
-.site-main .posts-navigation,
-.site-main .post-navigation {
-  margin: 0 0 1.5em;
-}
-
-.comment-navigation .nav-links,
-.posts-navigation .nav-links,
-.post-navigation .nav-links {
-  display: flex;
-}
-
-.comment-navigation .nav-previous,
-.posts-navigation .nav-previous,
-.post-navigation .nav-previous {
-  flex: 1 0 50%;
-}
-
-.comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next {
-  text-align: end;
-  flex: 1 0 50%;
 }
 
 /* Posts and pages
